avoid overlap of input-character-counter in forms

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
@@ -101,7 +101,7 @@
 }
 
 .input-character-counter{
-  @apply relative mt-4;
+  @apply relative mt-4 block;
 
   input[type="text"],
   input[type="email"],
